php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #30641 Compile error: error: symbol "zend_error" is used but not defined
Submitted: 2004-11-01 04:50 UTC Modified: 2005-05-04 14:39 UTC
Votes:3
Avg. Score:5.0 ± 0.0
Reproduced:2 of 2 (100.0%)
Same Version:2 (100.0%)
Same OS:2 (100.0%)
From: hakan at lisas dot de Assigned: andi (profile)
Status: Closed Package: Compile Failure
PHP Version: 5CVS-2005-03-25 OS: Solaris 9
Private report: No CVE-ID: None
 [2004-11-01 04:50 UTC] hakan at lisas dot de
Description:
------------
Compile of latest HEAD fails with:
/bin/sh /usr/local/php-src/libtool --silent --preserve-dup-deps --mode=compile gcc  -IZend/ -I/usr/local/php-src/Zend/ -DPHP_ATOM_INC -I/usr/local/php-src/include -I/usr/local/php-src/main -I/usr/local/php-src -I/usr/local/php-src/Zend -I/usr/local/include/libxml2 -I/usr/local/include -I/usr/local/include/freetype2 -I/usr/local/mysql/include/mysql -I/usr/local/pgsql/include  -D_POSIX_PTHREAD_SEMANTICS -I/usr/local/php-src/TSRM  -g -O2  -prefer-pic -c /usr/local/php-src/Zend/zend_execute.c -o Zend/zend_execute.lo
/usr/ccs/bin/as: "/var/tmp//ccOlcxja.s": error: symbol "zend_error" is used but not defined
/usr/ccs/bin/as: "/var/tmp//ccOlcxja.s": internal error: evaluate_symbol_expression(): op 20?
make: *** [Zend/zend_execute.lo] Error 1


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-11-10 07:03 UTC] dmitry@php.net
Can you please provide information about versions of your GCC and AS?
 [2004-11-10 10:29 UTC] hakan at lisas dot de
bwsx010:/# gcc --version
gcc (GCC) 3.3.2
Copyright (C) 2003 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

bwsx010:/# as -V
as: Sun WorkShop 6 update 2 Compiler Common 6.2 Solaris_9_CBE 2001/04/02
 [2004-11-14 06:15 UTC] hakan at lisas dot de
Tried with gcc  3.4.2. Still the same error.
 [2004-12-26 13:09 UTC] nlopess@php.net
I'm also getting this error on Solaris 9:
gcc 3.3
as -V:
GNU assembler version 2.14.90.0.4 (sparc-sun-solaris2.9) using BFD version 2.14.
90.0.4 20030523
 [2005-01-01 14:18 UTC] nlopess@php.net
In zend_execute.c if you comment  the line 47 (void zend_error_return..) and uncomment the next line (alternative defition of zend_error_noreturn) it compiles successfully (although with some iconv problems).
 [2005-01-19 01:39 UTC] sniper@php.net
Looks a lot like Andi wrote that..let's assign this to him. :)

 [2005-01-20 19:02 UTC] maande10 at vt dot edu
Found this problem when compiling the php5-200501192330 snapshot on Solaris 8.  gcc 3.4.2.  Switching to the alternate definition of zend_error_noreturn() in Zend/zend_execute.c fixed the compile problem.
 [2005-01-23 13:57 UTC] nlopess@php.net
The problem is that the code isn't staandard.
An alias must defined in the same file as the aliased function file.

So, in theory, moving that declaration to zend.c (where zend_error() is declared) whould solve the problems.
 [2005-03-25 01:19 UTC] sniper@php.net
Andi, this was verified still to happen in HEAD.

 [2005-04-05 09:26 UTC] sniper@php.net
See also bug #32580

 [2005-05-01 12:32 UTC] nlopess@php.net
my simple patch: http://news.php.net/php.internals/15768
 [2005-05-04 14:39 UTC] dmitry@php.net
Fixed in CVS HEAD.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 13 17:00:02 2026 UTC