Fixed bug #30641 (Compile error: error: symbol "zend_error" is used but not defined)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@185778 c90b9560-bf6c-de11-be94-00142212c4b1